--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 Project_Python/Labs/
 Project_Python/Scripts/
 Project_Python/diveintopython-5.4/
+codecov.yml
 
+.idea/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
