--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-Project_Python/Labs/
-Project_Python/Scripts/
+Project_Python/cornell/Labs/
+Project_Python/cornell/Scripts/
 Project_Python/diveintopython-5.4/
-codecov.yml
+Project_Python/py_bootcamp/master/
 
 .idea/
 # Byte-compiled / optimized / DLL files
