--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 Project_Python/cornell/Labs/
 Project_Python/cornell/Scripts/
 Project_Python/diveintopython-5.4/
+Project_Python/learn_python_thw/
 Project_Python/py_bootcamp/master/
 
 .idea/
