--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ Project_Python/cornell/Scripts/
 Project_Python/diveintopython-5.4/
 Project_Python/learn_python_thw/
 Project_Python/py_bootcamp/master/
+handson-ml-master/
 
 .idea/
 # Byte-compiled / optimized / DLL files
